# evolution-lab

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.deps-only.yml  compose.yml  docker-compose.yml
.cargo/: config.toml
.gitlab/: sast-ruleset.toml
common/: Cargo.toml
common-test/: Cargo.toml
common-test/src/: lib.rs
common/src/: lib.rs  subject_observer.rs
evolution-api/: Cargo.toml
evolution-api/resources/config/: default.toml
evolution-api/src/: main.rs
evolution-api/src/api/: mod.rs
evolution-api/src/api/v1/: mod.rs
evolution-api/src/config/: app.rs  log.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs  strategy.rs
genetic/: Cargo.toml
genetic-ext/: Cargo.toml
genetic-ext/src/: lib.rs
genetic-ext/src/gateways/: graphite_gateway.rs  mod.rs  statsd_gateway.rs
genetic/src/: adaptation.rs  individual.rs  lib.rs
genetic/src/evolution/: evolution_engine.rs  genetic_pool.rs  mod.rs
genetic/src/selection/: mod.rs  rng_wrapper.rs  select_by_chance.rs  select_by_rank.rs  select_by_tournament.rs  select_by_weight.rs  selection_result.rs  selector.rs
strategies/: Cargo.toml
strategies/examples/: my_strategy.rs
strategies/src/: lib.rs  my_strategy.rs  nim_strategy.rs
