[workspace]

members = [
    "common",
    "examples/basic",
    "examples/tic-tac-toe",
    "genetic",
    "genetic-ext",
    "evolution-api",
    "strategies",
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.30"
log = "0.4.21"
mockall = "0.12.1"
rand = "0.8.5"
simple_logger = "5.0.0"
thiserror = "1.0.61"
