[package]
name = "evolution-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
genetic = { path = "../genetic" }
genetic-ext = { path = "../genetic-ext" }
strategies = { path = "../strategies" }
actix-web = "4.9.0"
futures = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0.208", features = ["derive"] }
