[package]
name = "evolution-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
genetic = { path = "../genetic" }
genetic-ext = { path = "../genetic-ext" }
strategies = { path = "../strategies" }
actix-web = { workspace = true }
config = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
